Add Game Ratings to psql DB

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,52 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.22'
     annotationProcessor("io.micronaut:micronaut-http-validation")
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
     implementation("jakarta.annotation:jakarta.annotation-api")
     runtimeOnly("ch.qos.logback:logback-classic")
+
+    implementation 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor("io.micronaut:micronaut-http-validation")
+    implementation("io.micronaut:micronaut-http-client")
+    implementation("io.micronaut:micronaut-jackson-databind")
+    implementation("jakarta.annotation:jakarta.annotation-api")
+    runtimeOnly("ch.qos.logback:logback-classic")
+    implementation("io.micronaut:micronaut-validation")
+
+
+    implementation 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor('io.micronaut:micronaut-http-validation:3.6.3')
+    implementation('io.micronaut:micronaut-http-client:3.6.3')
+    implementation('io.micronaut:micronaut-jackson-databind:3.6.3')
+    implementation('jakarta.annotation:jakarta.annotation-api:2.1.0')
+    runtimeOnly('ch.qos.logback:logback-classic:1.4.1')
+    implementation('io.micronaut:micronaut-validation:3.6.3')
+
+    annotationProcessor("org.projectlombok:lombok")
+    annotationProcessor("io.micronaut:micronaut-http-validation")
+    implementation("io.micronaut:micronaut-http-client")
+    implementation("io.micronaut:micronaut-runtime")
+    implementation("io.micronaut.sql:micronaut-hibernate-jpa")
+    implementation("javax.annotation:javax.annotation-api")
+    compileOnly("org.projectlombok:lombok")
+    runtimeOnly("ch.qos.logback:logback-classic")
+    runtimeOnly("org.postgresql:postgresql")
+    runtimeOnly("io.micronaut.sql:micronaut-jdbc-hikari")
+    testImplementation("org.testcontainers:junit-jupiter")
+    testImplementation("org.testcontainers:postgresql")
+    testImplementation("org.testcontainers:testcontainers")
+    implementation("io.micronaut:micronaut-validation")
+    implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
+    implementation("io.micronaut.flyway:micronaut-flyway")
+
+    testImplementation 'org.mockito:mockito-core:2.1.0'
+    testImplementation("io.micronaut.rxjava2:micronaut-rxjava2-http-client:1.2.1")
+
 }
 
 application {
